[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"
[project]
name = "PyLTSpice"
version = "4.1.2"
authors = [
  { name="Nuno Brum", email="me@nunobrum.com" },
]
description = "A set of tools to Automate LTSpice simulations"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "psutil",
    "clipboard",
    "matplotlib",
    "keyboard",
    "spicelib>=0.6",
]
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["."]  # ["."] by default
include = ["*"]  # ["*"] by default
exclude = [".idea", "doc", "doc_build", ".vscode", ".git"]  # empty by default
namespaces = true  # true by default

[project.urls]
"Homepage" = "https://github.com/nunobrum/PyLTSpice"
"Bug Tracker" = "https://github.com/nunobrum/PyLTSpice/issues"
